Notebook cleanup, create functions

--- a/notebooks/model_building.ipynb
+++ b/notebooks/model_building.ipynb
@@ -4,16 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Build a regression model."
+    "# Build Regression Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import statsmodels.api as sm\n",
@@ -22,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +57,7 @@
        "      <th>0</th>\n",
        "      <td>7a19c49f486d7c0c02b3685d7b240448</td>\n",
        "      <td>La Taqueria Pinche Taco Shop</td>\n",
-       "      <td>164.000000</td>\n",
+       "      <td>164.0</td>\n",
        "      <td>8.4</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
@@ -66,7 +65,7 @@
        "      <th>1</th>\n",
        "      <td>7a19c49f486d7c0c02b3685d7b240448</td>\n",
        "      <td>Whole Foods</td>\n",
-       "      <td>182.000000</td>\n",
+       "      <td>182.0</td>\n",
        "      <td>8.6</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
@@ -74,7 +73,7 @@
        "      <th>2</th>\n",
        "      <td>7a19c49f486d7c0c02b3685d7b240448</td>\n",
        "      <td>Hokkaido Ramen Santouka</td>\n",
-       "      <td>186.000000</td>\n",
+       "      <td>186.0</td>\n",
        "      <td>7.8</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
@@ -82,7 +81,7 @@
        "      <th>3</th>\n",
        "      <td>7a19c49f486d7c0c02b3685d7b240448</td>\n",
        "      <td>Cactus Club Cafe Broadway + Ash</td>\n",
-       "      <td>232.000000</td>\n",
+       "      <td>232.0</td>\n",
        "      <td>7.5</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
@@ -90,94 +89,31 @@
        "      <th>4</th>\n",
        "      <td>7a19c49f486d7c0c02b3685d7b240448</td>\n",
        "      <td>Solly's Bagelry</td>\n",
-       "      <td>283.000000</td>\n",
+       "      <td>283.0</td>\n",
        "      <td>7.9</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>852</th>\n",
-       "      <td>ee620d77724c8993b0d366e7ec655b64</td>\n",
-       "      <td>Nicli Antica Pizzeria</td>\n",
-       "      <td>72.869669</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>853</th>\n",
-       "      <td>ee620d77724c8993b0d366e7ec655b64</td>\n",
-       "      <td>Togo Sushi</td>\n",
-       "      <td>61.784294</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>854</th>\n",
-       "      <td>ee620d77724c8993b0d366e7ec655b64</td>\n",
-       "      <td>Freshii</td>\n",
-       "      <td>70.443227</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>855</th>\n",
-       "      <td>ee620d77724c8993b0d366e7ec655b64</td>\n",
-       "      <td>Bubble Waffle Cafe</td>\n",
-       "      <td>1038.485055</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>856</th>\n",
-       "      <td>ee620d77724c8993b0d366e7ec655b64</td>\n",
-       "      <td>Cafe Perugia</td>\n",
-       "      <td>1065.119851</td>\n",
-       "      <td>6.4</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>857 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           station_id                             name  \\\n",
-       "0    7a19c49f486d7c0c02b3685d7b240448     La Taqueria Pinche Taco Shop   \n",
-       "1    7a19c49f486d7c0c02b3685d7b240448                      Whole Foods   \n",
-       "2    7a19c49f486d7c0c02b3685d7b240448          Hokkaido Ramen Santouka   \n",
-       "3    7a19c49f486d7c0c02b3685d7b240448  Cactus Club Cafe Broadway + Ash   \n",
-       "4    7a19c49f486d7c0c02b3685d7b240448                  Solly's Bagelry   \n",
-       "..                                ...                              ...   \n",
-       "852  ee620d77724c8993b0d366e7ec655b64            Nicli Antica Pizzeria   \n",
-       "853  ee620d77724c8993b0d366e7ec655b64                       Togo Sushi   \n",
-       "854  ee620d77724c8993b0d366e7ec655b64                          Freshii   \n",
-       "855  ee620d77724c8993b0d366e7ec655b64               Bubble Waffle Cafe   \n",
-       "856  ee620d77724c8993b0d366e7ec655b64                     Cafe Perugia   \n",
+       "                         station_id                             name  \\\n",
+       "0  7a19c49f486d7c0c02b3685d7b240448     La Taqueria Pinche Taco Shop   \n",
+       "1  7a19c49f486d7c0c02b3685d7b240448                      Whole Foods   \n",
+       "2  7a19c49f486d7c0c02b3685d7b240448          Hokkaido Ramen Santouka   \n",
+       "3  7a19c49f486d7c0c02b3685d7b240448  Cactus Club Cafe Broadway + Ash   \n",
+       "4  7a19c49f486d7c0c02b3685d7b240448                  Solly's Bagelry   \n",
        "\n",
-       "        distance  rating  free_bikes  \n",
-       "0     164.000000     8.4           8  \n",
-       "1     182.000000     8.6           8  \n",
-       "2     186.000000     7.8           8  \n",
-       "3     232.000000     7.5           8  \n",
-       "4     283.000000     7.9           8  \n",
-       "..           ...     ...         ...  \n",
-       "852    72.869669     5.0           4  \n",
-       "853    61.784294     4.6           4  \n",
-       "854    70.443227     5.6           4  \n",
-       "855  1038.485055     0.0           4  \n",
-       "856  1065.119851     6.4           4  \n",
-       "\n",
-       "[857 rows x 5 columns]"
+       "   distance  rating  free_bikes  \n",
+       "0     164.0     8.4           8  \n",
+       "1     182.0     8.6           8  \n",
+       "2     186.0     7.8           8  \n",
+       "3     232.0     7.5           8  \n",
+       "4     283.0     7.9           8  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +125,7 @@
     "    FROM points_of_interst\"\"\"\n",
     "df = pd.read_sql_query(query, con)\n",
     "con.close()\n",
-    "df"
+    "df.head()"
    ]
   },
   {
@@ -201,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -232,8 +168,8 @@
       "Dep. Variable:             free_bikes   R-squared:                       0.027\n",
       "Model:                            OLS   Adj. R-squared:                  0.026\n",
       "Method:                 Least Squares   F-statistic:                     23.43\n",
-      "Date:                Thu, 16 May 2024   Prob (F-statistic):           1.54e-06\n",
-      "Time:                        02:50:06   Log-Likelihood:                -2791.7\n",
+      "Date:                Thu, 26 Sep 2024   Prob (F-statistic):           1.54e-06\n",
+      "Time:                        00:45:55   Log-Likelihood:                -2791.7\n",
       "No. Observations:                 857   AIC:                             5587.\n",
       "Df Residuals:                     855   BIC:                             5597.\n",
       "Df Model:                           1                                         \n",
@@ -264,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -323,60 +259,21 @@
        "      <td>0.0</td>\n",
        "      <td>31.074777</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ace20c241ee38643c9060f290b215b9d</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>754.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>e1ff428dadc7c32141b9d89a7b56728a</th>\n",
-       "      <td>10.0</td>\n",
-       "      <td>755.855286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>cadc004f0903ef45e898032143c0832f</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>788.250000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>afacb2133f2462aba7748cc21b71c788</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>813.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38f045e3f43f86eae42ca4c60257ade0</th>\n",
-       "      <td>17.0</td>\n",
-       "      <td>850.339676</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>162 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                  free_bikes    distance\n",
-       "station_id                                              \n",
-       "b9baf685b7053de899bf3467f61c2781        16.0    9.832073\n",
-       "0c42f45e4a14957ad4a6d521d0ba8bc3        24.0   26.698440\n",
-       "7d231a181d21056e4ba80c4d9939fe92         6.0   27.523596\n",
-       "e9b37f2d9b7b2e2e3ade73f13acb69b2         3.0   28.430047\n",
-       "fbb1d30d7f30b049873f5be5688563d4         0.0   31.074777\n",
-       "...                                      ...         ...\n",
-       "ace20c241ee38643c9060f290b215b9d         8.0  754.000000\n",
-       "e1ff428dadc7c32141b9d89a7b56728a        10.0  755.855286\n",
-       "cadc004f0903ef45e898032143c0832f         6.0  788.250000\n",
-       "afacb2133f2462aba7748cc21b71c788         6.0  813.000000\n",
-       "38f045e3f43f86eae42ca4c60257ade0        17.0  850.339676\n",
-       "\n",
-       "[162 rows x 2 columns]"
+       "                                  free_bikes   distance\n",
+       "station_id                                             \n",
+       "b9baf685b7053de899bf3467f61c2781        16.0   9.832073\n",
+       "0c42f45e4a14957ad4a6d521d0ba8bc3        24.0  26.698440\n",
+       "7d231a181d21056e4ba80c4d9939fe92         6.0  27.523596\n",
+       "e9b37f2d9b7b2e2e3ade73f13acb69b2         3.0  28.430047\n",
+       "fbb1d30d7f30b049873f5be5688563d4         0.0  31.074777"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,12 +281,12 @@
    "source": [
     "#The number of free ebikes is the same for each station and each POI will have the same free ebike so the average is more representatitive\n",
     "df_group = df.groupby('station_id')[['free_bikes', 'distance']].mean().sort_values(by='distance')\n",
-    "df_group"
+    "df_group.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -401,8 +298,8 @@
       "Dep. Variable:             free_bikes   R-squared:                       0.007\n",
       "Model:                            OLS   Adj. R-squared:                  0.000\n",
       "Method:                 Least Squares   F-statistic:                     1.078\n",
-      "Date:                Thu, 16 May 2024   Prob (F-statistic):              0.301\n",
-      "Time:                        02:50:14   Log-Likelihood:                -529.97\n",
+      "Date:                Thu, 26 Sep 2024   Prob (F-statistic):              0.301\n",
+      "Time:                        00:46:14   Log-Likelihood:                -529.97\n",
       "No. Observations:                 162   AIC:                             1064.\n",
       "Df Residuals:                     160   BIC:                             1070.\n",
       "Df Model:                           1                                         \n",
@@ -463,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -475,8 +372,8 @@
       "Dep. Variable:             free_bikes   R-squared:                       0.000\n",
       "Model:                            OLS   Adj. R-squared:                 -0.001\n",
       "Method:                 Least Squares   F-statistic:                    0.2349\n",
-      "Date:                Thu, 16 May 2024   Prob (F-statistic):              0.628\n",
-      "Time:                        02:50:19   Log-Likelihood:                -2803.2\n",
+      "Date:                Thu, 26 Sep 2024   Prob (F-statistic):              0.628\n",
+      "Time:                        00:46:19   Log-Likelihood:                -2803.2\n",
       "No. Observations:                 857   AIC:                             5610.\n",
       "Df Residuals:                     855   BIC:                             5620.\n",
       "Df Model:                           1                                         \n",
@@ -530,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -542,8 +439,8 @@
       "Dep. Variable:               distance   R-squared:                       0.007\n",
       "Model:                            OLS   Adj. R-squared:                  0.006\n",
       "Method:                 Least Squares   F-statistic:                     6.017\n",
-      "Date:                Thu, 16 May 2024   Prob (F-statistic):             0.0144\n",
-      "Time:                        04:58:16   Log-Likelihood:                -5887.9\n",
+      "Date:                Thu, 26 Sep 2024   Prob (F-statistic):             0.0144\n",
+      "Time:                        00:46:25   Log-Likelihood:                -5887.9\n",
       "No. Observations:                 857   AIC:                         1.178e+04\n",
       "Df Residuals:                     855   BIC:                         1.179e+04\n",
       "Df Model:                           1                                         \n",
@@ -584,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -593,26 +490,26 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:             free_bikes   R-squared:                       0.027\n",
-      "Model:                            OLS   Adj. R-squared:                  0.024\n",
-      "Method:                 Least Squares   F-statistic:                     11.71\n",
-      "Date:                Thu, 16 May 2024   Prob (F-statistic):           9.65e-06\n",
-      "Time:                        05:56:16   Log-Likelihood:                -2791.7\n",
-      "No. Observations:                 857   AIC:                             5589.\n",
-      "Df Residuals:                     854   BIC:                             5604.\n",
+      "Dep. Variable:               distance   R-squared:                       1.000\n",
+      "Model:                            OLS   Adj. R-squared:                  1.000\n",
+      "Method:                 Least Squares   F-statistic:                 2.113e+32\n",
+      "Date:                Thu, 26 Sep 2024   Prob (F-statistic):               0.00\n",
+      "Time:                        00:46:28   Log-Likelihood:                 23407.\n",
+      "No. Observations:                 857   AIC:                        -4.681e+04\n",
+      "Df Residuals:                     854   BIC:                        -4.679e+04\n",
       "Df Model:                           2                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------\n",
-      "const          7.0389      0.995      7.077      0.000       5.087       8.991\n",
-      "distance       0.0044      0.001      4.814      0.000       0.003       0.006\n",
-      "rating         0.0104      0.119      0.087      0.931      -0.224       0.244\n",
+      "const      -1.469e-14   5.26e-14     -0.279      0.780   -1.18e-13    8.85e-14\n",
+      "distance       1.0000   4.88e-17   2.05e+16      0.000       1.000       1.000\n",
+      "rating       2.51e-14   6.31e-15      3.981      0.000    1.27e-14    3.75e-14\n",
       "==============================================================================\n",
-      "Omnibus:                       62.552   Durbin-Watson:                   0.565\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               74.941\n",
-      "Skew:                           0.720   Prob(JB):                     5.33e-17\n",
-      "Kurtosis:                       3.157   Cond. No.                     2.00e+03\n",
+      "Omnibus:                       86.921   Durbin-Watson:                   0.634\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              111.887\n",
+      "Skew:                           0.838   Prob(JB):                     5.06e-25\n",
+      "Kurtosis:                       3.572   Cond. No.                     2.00e+03\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
@@ -630,41 +527,13 @@
     "print_model = model.summary()\n",
     "print(print_model)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Stretch"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "How can you turn the regression model into a classification model?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LHL",
+   "display_name": "llm_env",
    "language": "python",
-   "name": "lhl"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -676,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
