--- a/notebooks/yelp_foursquare_EDA.ipynb
+++ b/notebooks/yelp_foursquare_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,165 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>free_bikes</th>\n",
-       "      <th>id</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>8</td>\n",
-       "      <td>7a19c49f486d7c0c02b3685d7b240448</td>\n",
-       "      <td>-123.114397</td>\n",
-       "      <td>49.262487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>11</td>\n",
-       "      <td>32603a87cfca71d0f7dfa3513bad69d5</td>\n",
-       "      <td>-123.121817</td>\n",
-       "      <td>49.274566</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>6d42fa40360f9a6b2bf641c7b8bb2862</td>\n",
-       "      <td>-123.110154</td>\n",
-       "      <td>49.279764</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8</td>\n",
-       "      <td>66f873d641d448bd1572ab086665a458</td>\n",
-       "      <td>-123.113504</td>\n",
-       "      <td>49.260599</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>485d4d24c803cfde829ab89699fed833</td>\n",
-       "      <td>-123.117772</td>\n",
-       "      <td>49.264215</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>247</th>\n",
-       "      <td>7</td>\n",
-       "      <td>10acadd77bc21f26a7f09d8c74d4af2d</td>\n",
-       "      <td>-123.114237</td>\n",
-       "      <td>49.277773</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>248</th>\n",
-       "      <td>1</td>\n",
-       "      <td>58345bb719f4e570ed4edc9dfa6a68a2</td>\n",
-       "      <td>-123.254307</td>\n",
-       "      <td>49.263073</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>249</th>\n",
-       "      <td>5</td>\n",
-       "      <td>261efc67071963969b3f848c66454d97</td>\n",
-       "      <td>-123.250902</td>\n",
-       "      <td>49.259999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>250</th>\n",
-       "      <td>4</td>\n",
-       "      <td>ee620d77724c8993b0d366e7ec655b64</td>\n",
-       "      <td>-123.236210</td>\n",
-       "      <td>49.254780</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>251</th>\n",
-       "      <td>8</td>\n",
-       "      <td>e02dd224b0177c65418bcb3f72d2f77d</td>\n",
-       "      <td>-123.061429</td>\n",
-       "      <td>49.277510</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>252 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     free_bikes                                id   longitude   latitude\n",
-       "0             8  7a19c49f486d7c0c02b3685d7b240448 -123.114397  49.262487\n",
-       "1            11  32603a87cfca71d0f7dfa3513bad69d5 -123.121817  49.274566\n",
-       "2             0  6d42fa40360f9a6b2bf641c7b8bb2862 -123.110154  49.279764\n",
-       "3             8  66f873d641d448bd1572ab086665a458 -123.113504  49.260599\n",
-       "4             0  485d4d24c803cfde829ab89699fed833 -123.117772  49.264215\n",
-       "..          ...                               ...         ...        ...\n",
-       "247           7  10acadd77bc21f26a7f09d8c74d4af2d -123.114237  49.277773\n",
-       "248           1  58345bb719f4e570ed4edc9dfa6a68a2 -123.254307  49.263073\n",
-       "249           5  261efc67071963969b3f848c66454d97 -123.250902  49.259999\n",
-       "250           4  ee620d77724c8993b0d366e7ec655b64 -123.236210  49.254780\n",
-       "251           8  e02dd224b0177c65418bcb3f72d2f77d -123.061429  49.277510\n",
-       "\n",
-       "[252 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 162,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "url = \"http://api.citybik.es/\"\n",
-    "href = \"/v2/networks/\"\n",
-    "#network_id = 'velib'\n",
-    "response = requests.get(url + href)\n",
-    "# Check if the request was successful (status code 200)\n",
-    "if response.status_code == 200:\n",
-    "    # Parse the JSON response into a Python dictionary\n",
-    "    data = response.json()\n",
-    "else:\n",
-    "    print(\"Request failed with status code:\", response.status_code)\n",
-    "networks = data['networks']\n",
-    "city = 'Vancouver'\n",
-    "filtered_network = [network for network in networks if network['location']['city'] == city]\n",
-    "network_id = filtered_network[0]['href']\n",
-    "response1 = requests.get(url + network_id)\n",
-    "if response1.status_code == 200:\n",
-    "    # Parse the JSON response into a Python dictionary\n",
-    "    data1 = response1.json()\n",
-    "else:\n",
-    "    print(\"Request failed with status code:\", response.status_code)\n",
-    "vancouver_network_stations = pd.json_normalize(data=data1, record_path=['network', 'stations'])\n",
-    "vancouver_network_stations = vancouver_network_stations[['free_bikes', 'id', 'longitude', 'latitude']]\n",
-    "vancouver_network_stations"
+    "vancouver_network_stations = pd.read_csv('../data/van_network_stations.csv')"
    ]
   },
   {
@@ -200,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'results': [{'fsq_id': '4e223f06d4c0d32590f80ff4', 'categories': [{'id': 13306, 'name': 'Taco Restaurant', 'short_name': 'Tacos', 'plural_name': 'Taco Restaurants', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/taco_', 'suffix': '.png'}}], 'distance': 164, 'location': {'address': '2450 Yukon St', 'address_extended': 'at W Broadway', 'country': 'CA', 'cross_street': 'at W Broadway', 'formatted_address': '2450 Yukon St (at W Broadway), Vancouver BC V5Y 0A4', 'locality': 'Vancouver', 'postcode': 'V5Y 0A4', 'region': 'BC'}, 'name': 'La Taqueria Pinche Taco Shop', 'price': 2, 'rating': 8.4}, {'fsq_id': '4aa73d25f964a520704c20e3', 'categories': [{'id': 17069, 'name': 'Grocery Store', 'short_name': 'Grocery Store', 'plural_name': 'Grocery Stores', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/shops/food_grocery_', 'suffix': '.png'}}, {'id': 17071, 'name': 'Health Food Store', 'short_name': 'Health Food Store', 'plural_name': 'Health Food Stores', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/shops/food_grocery_', 'suffix': '.png'}}, {'id': 17077, 'name': 'Meat and Seafood Store', 'short_name': 'Meat and Seafood Store', 'plural_name': 'Meat and Seafood Stores', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/shops/food_grocery_', 'suffix': '.png'}}], 'description': \"Welcome to Vancouver, BC Whole Foods Market! Whole Foods is the leading retailer of natural and organic foods uniquely positioned as America's Healthiest Grocery Store.\", 'distance': 182, 'location': {'address': '510 8th Ave W', 'country': 'CA', 'cross_street': 'at Cambie St', 'formatted_address': '510 8th Ave W (at Cambie St), Vancouver BC V5Z 1C5', 'locality': 'Vancouver', 'postcode': 'V5Z 1C5', 'region': 'BC'}, 'name': 'Whole Foods', 'price': 3, 'rating': 8.6}, {'fsq_id': '588e7f618b0ebb5d010abac4', 'categories': [{'id': 13272, 'name': 'Ramen Restaurant', 'short_name': 'Ramen', 'plural_name': 'Ramen Restaurants', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/ramen_', 'suffix': '.png'}}, {'id': 13065, 'name': 'Restaurant', 'short_name': 'Restaurant', 'plural_name': 'Restaurants', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/default_', 'suffix': '.png'}}], 'distance': 186, 'location': {'address': '558 Broadway W', 'country': 'CA', 'cross_street': 'Cambie Street', 'formatted_address': '558 Broadway W (Cambie Street), Vancouver BC V5Z 1E9', 'locality': 'Vancouver', 'postcode': 'V5Z 1E9', 'region': 'BC'}, 'name': 'Hokkaido Ramen Santouka', 'rating': 7.8}, {'fsq_id': '4aa843e0f964a5207f5020e3', 'categories': [{'id': 13068, 'name': 'American Restaurant', 'short_name': 'American', 'plural_name': 'American Restaurants', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/default_', 'suffix': '.png'}}, {'id': 13303, 'name': 'Mexican Restaurant', 'short_name': 'Mexican', 'plural_name': 'Mexican Restaurants', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/mexican_', 'suffix': '.png'}}, {'id': 13338, 'name': 'Seafood Restaurant', 'short_name': 'Seafood', 'plural_name': 'Seafood Restaurants', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/seafood_', 'suffix': '.png'}}], 'description': 'Cactus Club Cafe is the leading casual fine dining restaurant concept in Canada. Text like cactusclubcafe to 32665 to join us on Facebook.', 'distance': 232, 'location': {'address': '575 West Broadway', 'country': 'CA', 'cross_street': 'at Ash St', 'formatted_address': '575 West Broadway (at Ash St), Vancouver BC V5Z 1E6', 'locality': 'Vancouver', 'postcode': 'V5Z 1E6', 'region': 'BC'}, 'name': 'Cactus Club Cafe Broadway + Ash', 'price': 3, 'rating': 7.5}, {'fsq_id': '4ab145f3f964a520d56820e3', 'categories': [{'id': 13002, 'name': 'Bakery', 'short_name': 'Bakery', 'plural_name': 'Bakeries', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/bakery_', 'suffix': '.png'}}, {'id': 13039, 'name': 'Deli', 'short_name': 'Deli', 'plural_name': 'Delis', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/deli_', 'suffix': '.png'}}], 'distance': 283, 'location': {'address': '368 7th Ave W', 'country': 'CA', 'cross_street': 'at Yukon St', 'formatted_address': '368 7th Ave W (at Yukon St), Vancouver BC V5Y 1M4', 'locality': 'Vancouver', 'postcode': 'V5Y 1M4', 'region': 'BC'}, 'name': \"Solly's Bagelry\", 'price': 2, 'rating': 7.9}, {'fsq_id': '4c75baefdb52b1f7c5b979dc', 'categories': [{'id': 13035, 'name': 'Coffee Shop', 'short_name': 'Coffee Shop', 'plural_name': 'Coffee Shops', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/coffeeshop_', 'suffix': '.png'}}, {'id': 13065, 'name': 'Restaurant', 'short_name': 'Restaurant', 'plural_name': 'Restaurants', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/default_', 'suffix': '.png'}}], 'description': 'espresso bar and bistro', 'distance': 336, 'location': {'address': '2310 Ash St', 'country': 'CA', 'cross_street': 'at W 7th Ave', 'formatted_address': '2310 Ash St (at W 7th Ave), Vancouver BC V5Z 3C2', 'locality': 'Vancouver', 'postcode': 'V5Z 3C2', 'region': 'BC'}, 'name': 'Caffe Cittadella', 'price': 2, 'rating': 8.7}, {'fsq_id': '52ae4f3c11d227ba4f4b055a', 'categories': [{'id': 13199, 'name': 'Indian Restaurant', 'short_name': 'Indian', 'plural_name': 'Indian Restaurants', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/indian_', 'suffix': '.png'}}], 'distance': 396, 'location': {'address': '2961 Cambie St', 'country': 'CA', 'cross_street': '', 'formatted_address': '2961 Cambie St, Vancouver BC V5Z 2V7', 'locality': 'Vancouver', 'postcode': 'V5Z 2V7', 'region': 'BC'}, 'name': 'Indian Roti Kitchen', 'price': 2, 'rating': 8.4}, {'fsq_id': '4aec909ff964a520ccc821e3', 'categories': [{'id': 13035, 'name': 'Coffee Shop', 'short_name': 'Coffee Shop', 'plural_name': 'Coffee Shops', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/coffeeshop_', 'suffix': '.png'}}, {'id': 13065, 'name': 'Restaurant', 'short_name': 'Restaurant', 'plural_name': 'Restaurants', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/default_', 'suffix': '.png'}}], 'description': 'Milano Coffee is very proudly from Vancouver and has been at the forefront of the west coast coffee culture since it’s inception in 1984.', 'distance': 430, 'location': {'address': '156 8th Ave W', 'country': 'CA', 'cross_street': 'btwn Columbia & Manitoba St', 'formatted_address': '156 8th Ave W (btwn Columbia & Manitoba St), Vancouver BC V5Y 1N2', 'locality': 'Vancouver', 'postcode': 'V5Y 1N2', 'region': 'BC'}, 'name': 'Milano Coffee', 'price': 2, 'rating': 8.9}, {'fsq_id': '57e6d0a2498e8d223bc2af56', 'categories': [{'id': 13034, 'name': 'Café', 'short_name': 'Café', 'plural_name': 'Cafés', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/cafe_', 'suffix': '.png'}}, {'id': 13040, 'name': 'Dessert Shop', 'short_name': 'Desserts', 'plural_name': 'Dessert Shops', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/dessert_', 'suffix': '.png'}}, {'id': 13065, 'name': 'Restaurant', 'short_name': 'Restaurant', 'plural_name': 'Restaurants', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/food/default_', 'suffix': '.png'}}], 'distance': 454, 'location': {'address': '3010 Cambie St', 'country': 'CA', 'cross_street': '', 'formatted_address': '3010 Cambie St, Vancouver BC V5Z 2V9', 'locality': 'Vancouver', 'postcode': 'V5Z 2V9', 'region': 'BC'}, 'name': 'Passion8 Dessert Cafe', 'price': 1, 'rating': 7.7}, {'fsq_id': '4aa84de2f964a520ba5020e3', 'categories': [{'id': 10004, 'name': 'Art Gallery', 'short_name': 'Art Gallery', 'plural_name': 'Art Galleries', 'icon': {'prefix': 'https://ss3.4sqi.net/img/categories_v2/arts_entertainment/artgallery_', 'suffix': '.png'}}], 'distance': 509, 'location': {'address': '316W 5th Ave W', 'address_extended': '# 101', 'country': 'CA', 'cross_street': 'near Alberta St', 'formatted_address': '316W 5th Ave W (near Alberta St), Vancouver BC V5Y 1J5', 'locality': 'Vancouver', 'postcode': 'V5Y 1J5', 'region': 'BC'}, 'name': 'The Beaumont Studios', 'rating': 8.4}], 'context': {'geo_bounds': {'circle': {'center': {'latitude': 49.262487, 'longitude': -123.114397}, 'radius': 1000}}}}\n"
+      "Request failed with status code: 401\n"
      ]
     }
    ],
@@ -673,7 +519,7 @@
     "        df = pd.DataFrame(fsq_json['results'])\n",
     "        df['station_id'] = row['id']\n",
     "        fsq_df = pd.concat([fsq_df, df], ignore_index=True)\n",
-    "#else:\n",
+    "else:\n",
     "    print(\"Request failed with status code:\", result.status_code)"
    ]
   },
@@ -1019,14 +865,13 @@
     }
    ],
    "source": [
-    "fsq_df['categories']\n",
-    "\n",
     "def extract_values(dictionary_list):\n",
     "    values = [list(d.values())[1] for d in dictionary_list if d][0]  # Extracting values from dictionaries\n",
     "    return values\n",
+    "\n",
     "fsq_df['category'] = fsq_df['categories'].apply(lambda x: extract_values(x))\n",
     "fsq_parsed = fsq_df[['station_id', 'name', 'category', 'distance', 'rating', 'price']]\n",
-    "fsq_parsed"
+    "fsq_parsed.head()"
    ]
   },
   {
@@ -1634,7 +1479,7 @@
     }
    ],
    "source": [
-    "yelp_df"
+    "yelp_df.head()"
    ]
   },
   {
@@ -1821,7 +1666,6 @@
    "source": [
     "#getting dictionary values from dataframe\n",
     "yelp_df['category'] = df['categories'].apply(lambda x: [a['alias'] for a in x][0])\n",
-    "yelp_df['category'] = yelp_df['category']\n",
     "yelp_parsed = yelp_df[['station_id', 'name', 'category', 'distance', 'rating', 'price']]\n",
     "yelp_parsed"
    ]
@@ -2008,7 +1852,7 @@
     }
    ],
    "source": [
-    "yelp_parsed"
+    "yelp_parsed.head()"
    ]
   },
   {
@@ -2439,9 +2283,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LHL",
+   "display_name": "llm_env",
    "language": "python",
-   "name": "lhl"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2453,7 +2297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
